# django-storage-dispatcher

./: .env  MANIFEST.in  README.md  docker-compose.yml  readme.md  setup.cfg
django_storage_dispatcher/: admin.py  resolvers.py  views.py
docs/: configuration.md
env/: dockerfile  entrypoint
storage_dispatcher/: __init__.py  apps.py  models.py  resolvers.py  storage.py  tests.py
test/: run-tests  run-tests.sh  tests-django-3.2.py  tests-pre-django-4.2.py
tests/: run-tests  tests-django-5.0.py  tests-django-post.py
