[metadata]
name = storage-dispatcher
version = 0.1
description = A Django app to use multiple storages on a single model.
long_description = file: readme.md
url = https://github.com/cloudy-oasis/django-storage-dispatcher
author = Cloudy Oasis
license = LGPL-3.0-or-later
classifiers = 
	Environment :: Web Environment
	Framework :: Django
	Framework :: Django :: 2.2
	Framework :: Django :: 3.2
	Framework :: Django :: 4.2
	Framework :: Django :: 5.0
	Intended Audience :: Developers
	License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Topic :: Internet :: WWW/HTTP
	Private :: Not ready for upload

[options]
include_package_data = true
packages = find:
python_requires = >= 3.6
install_requires =
	Django >= 2.2
