[metadata]
name = django-storage-dispatcher
version = 0.1.0
description = A Django app to use multiple storages on a single model.
long_description = file: README.md
url = https://github.com/cloudy-oasis/django-storage-dispatcher
author = Cloudy Oasis
license = LGPL-3.0-or-later
classifiers = 
	Environment :: Web Environment
	Framework :: Django
	Framework :: Django :: 2.2
	Framework :: Django :: 3.2
	Framework :: Django :: 4.2
	Framework :: Django :: 5.0
	Intended Audience :: Developers
	Development Status :: 4 - Beta
	License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Topic :: Internet :: WWW/HTTP

[options]
include_package_data = true
packages =
	storage_dispatcher
python_requires = >= 3.6
install_requires =
	Django >= 2.2
